--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link reel="stylesheet" href="style.css"
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +19,6 @@
     </h1>
 </body>
 
-v5
 
 
 
